# keras3-template

./: README.md  pyproject.toml
src/play/: ex1.py
