[project]
name = "keras3-template"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "svtter", email = "svtter@qq.com"},
]
dependencies = [
    "keras>3",
    "jax[cuda12_pip]>=0.4.30",
    "flax>=0.8.5",
]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "tensorflow-cpu~=2.16.2",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
]
